--- a/ansible/monitoring/templates/node-exporter.env.j2
+++ b/ansible/monitoring/templates/node-exporter.env.j2
@@ -2,7 +2,7 @@
 # Due to shell scaping, to pass backslashes for regexes, you need to double
 # them (\\d for \d). If running under systemd, you need to double them again
 # (\\\\d to mean \d), and escape newlines too.
-ARGS="--web.listen-address=127.0.0.1:9100"
+OPTIONS=""
 
 # prometheus-node-exporter supports the following options:
 #
