feat(ansible): boot up flux and cilium

--- a/ansible/monitoring/templates/promtail.yml.j2
+++ b/ansible/monitoring/templates/promtail.yml.j2
@@ -3,7 +3,7 @@ server:
   grpc_listen_port: 0
 
 positions:
-  filename: /tmp/positions.yaml
+  filename: /var/lib/promtail/positions.yaml
 
 clients:
   - url: https://{{ loki_remote_write.username }}:{{ loki_remote_write.password }}@{{ loki_remote_write.host }}/loki/api/v1/push
