--- a/ansible/monitoring/templates/vmagent.yml.j2
+++ b/ansible/monitoring/templates/vmagent.yml.j2
@@ -13,3 +13,10 @@ scrape_configs:
           - localhost:9100
         labels:
           instance: hetzner-personal
+
+  - job_name: fail2ban-exporter
+    static_configs:
+      - targets:
+          - localhost:9191
+        labels:
+          instance: hetzner-personal
