chore: revert back to static-server

--- a/ansible/roles/k8s-oidc/templates/static-web-server-prepare.sh.j2
+++ b/ansible/roles/k8s-oidc/templates/static-web-server-prepare.sh.j2
@@ -4,20 +4,20 @@
 
 set -eu
 
-mkdir -p {{ static_web_server_home }}/.well-known \
-  {{ static_web_server_home }}/openid/v1
+mkdir -p {{ static_web_server_static }}/.well-known \
+  {{ static_web_server_static }}/openid/v1
 
 kubectl get --raw /.well-known/openid-configuration > \
-  {{ static_web_server_home }}/.well-known/openid-configuration
+  {{ static_web_server_static }}/.well-known/openid-configuration
 
 kubectl get --raw /openid/v1/jwks > \
-  {{ static_web_server_home }}/openid/v1/jwks
+  {{ static_web_server_static }}/openid/v1/jwks
 
 cp /etc/letsencrypt/live/{{ domain_name }}/fullchain.pem \
-  {{ static_web_server_home }}/cert.pem
+  {{ static_web_server_root }}/cert.pem
 
 cp /etc/letsencrypt/live/{{ domain_name }}/privkey.pem \
-  {{ static_web_server_home }}/key.pem
+  {{ static_web_server_root }}/key.pem
 
 
-chown -R static-web-server:static-web-server {{ static_web_server_home }}
+chown -R static-web-server:static-web-server {{ static_web_server_root }}
