--- a/ansible/roles/k8s-oidc/templates/static-web-server-prepare.service.j2
+++ b/ansible/roles/k8s-oidc/templates/static-web-server-prepare.service.j2
@@ -7,7 +7,7 @@ ExecStartPre=/bin/mkdir -p .well-known openid/v1
 ExecStart=/usr/local/bin/static-web-server-prepare
 Restart=on-failure
 Type=oneshot
-WorkingDirectory={{ static_web_server_home }}
+WorkingDirectory={{ static_web_server_root }}
 
 [Install]
 WantedBy=multi-user.target
