--- a/ansible/roles/monitoring/templates/promtail.yml.j2
+++ b/ansible/roles/monitoring/templates/promtail.yml.j2
@@ -6,13 +6,15 @@ positions:
   filename: /var/lib/promtail/positions.yaml
 
 clients:
-  - url: https://{{ loki_remote_write.username }}:{{ loki_remote_write.password }}@{{ loki_remote_write.host }}/loki/api/v1/push
-
+  - url: https://{{ loki_remote_write.host }}/loki/api/v1/push
+    basic_auth:
+      username: {{ loki_remote_write.username }}
+      password_file: {{ loki_remote_write_password_file }}
 scrape_configs:
   - job_name: system
     static_configs:
       - targets:
           - localhost
         labels:
-          job: varlogs
+          job: {{ ansible_hostname }}
           __path__: /var/log/*.log
