feat: deploy the listmonk exporter

--- a/ansible/roles/monitoring/templates/vmagent.service.j2
+++ b/ansible/roles/monitoring/templates/vmagent.service.j2
@@ -1,6 +1,6 @@
 [Unit]
 Description=Victoria Metrics - VMAgent
-Documentation=https://github.com/VictoriaMetrics/VictoriaMetrics
+Documentation=https://docs.victoriametrics.com/vmagent/
 
 [Service]
 ExecStart=/usr/local/bin/vmagent-prod \
