chore: add prefix to k3s backups

--- a/ansible/roles/k3s-backup-blob-storage/templates/k3s-backup-blob-storage.sh.j2
+++ b/ansible/roles/k3s-backup-blob-storage/templates/k3s-backup-blob-storage.sh.j2
@@ -9,4 +9,4 @@ export DATE=$(date +%Y-%m-%d)
 
 tar czvf "$TARGET_FILENAME" --exclude=state.db-wal /var/lib/rancher/k3s/server/db/
 
-mc cp "$TARGET_FILENAME" "$ALIAS/$BUCKET/$DATE/"
+mc cp "$TARGET_FILENAME" "$ALIAS/$BUCKET/k3s-backups/$DATE/"
